--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
             </main>
          
         </header>
+        <footer>
+               Copyright  <a href="https://github.com/gautam-hub"><strong><u><i>Gautam</i></u></strong></a><sup>&copy;</sup>
+        </footer>
             
     </body>
