--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#">home</a>
                 <a href="#">gallery</a>
                 <a href="#">about</a>
-                <a href="#">contact</a>
+                <a href="contact.html">contact</a>
             </div>
                </nav>
             <main>
