--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="logo"><h1 class="animated infinite heartBeat delay-2s">apna bihar &hearts;</h1> </div>
             <div class="menu">
                 <a href="#">home</a>
-                <a href="#">gallery</a>
-                <a href="#">about</a>
+                <a href="coming-soon.html">gallery</a>
+                <a href="coming-soon.html">about</a>
                 <a href="contact.html">contact</a>
             </div>
                </nav>
