--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
          <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link rel="stylesheet" href="style.css">
+        <script>
+            alert("This is an undergoing project.")
+        </script>
         
     </head>
     <body>
