--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <h3>Welcome To Bihar.</h3>
                     <h1>Do Come & Visit <span class="change"> </span></h1>
                     <p>"India The Place of God & Goddess"</p>
-                    <a href="#1" class="btnone">Learn more</a>
-                    <a href="#" class="btntwo">Signup here</a>
+                    <a href="coming-soon.html" class="btnone">Learn more</a>
+                    <a href="coming-soon.html" class="btntwo">Signup here</a>
                 </section>
             </main>
          
